# OpenMP-Learning-Repo

./: README.md
.github/workflows/: cpp.yml
00 - Introduce/: CMakeLists.txt  README.md  main.cc
01 - Computing Hardware/: README.md
02 - Currency Consept/: README.md  console.js  main.cc
02 - Parallel Computing/: note.md
03 - Currency Consept/: currency_consept.md
04 Concurrency vs Parallel/: .gitignore  CMakeLists.txt  example.cc  note.md
1.0 Shared Memory Preliminaries/: Note.md
1.1 Fork Join Pattern/: Note.md
1.2 Race Conditions/: Note.md
